--- a/단위/rem.html
+++ b/단위/rem.html
@@ -10,7 +10,7 @@
         p{
             font-size: 1em;
         }
-        p>span{font-size: ;}
+        p>span{font-size: 3em ;}
     </style>
 </head>
 <body>
